<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="150dp"
            android:layout_height="54dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="48dp"
            android:text="@string/upload"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_title_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/desc_img"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/outlinedTextField"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextField" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:textAlignment="textStart"
            app:endIconMode="clear_text"
            app:hintTextAppearance="?attr/textAppearanceCaption"
            app:layout_constraintBottom_toTopOf="@+id/outlinedTextFieldLoc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_descrition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/hint_desc_img" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imb_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/navi"
            android:paddingVertical="15dp"
            android:src="@drawable/ic_add_location"
            app:layout_constraintBottom_toBottomOf="@+id/outlinedTextFieldLoc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/outlinedTextFieldLoc" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldLoc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:textAlignment="textStart"
            app:endIconMode="clear_text"
            app:hintTextAppearance="?attr/textAppearanceCaption"
            app:layout_constraintBottom_toTopOf="@+id/btn_upload"
            app:layout_constraintEnd_toStartOf="@+id/imb_location"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_loc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/location" />

        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/lay_image"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="60dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="4dp"
            app:layout_constraintBottom_toTopOf="@+id/outlinedTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tv_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:text="@string/hint_image"
                    android:textColor="@color/text_hint"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineVertical_2"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_camera"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:drawableEnd="@drawable/ic_camera"
                    android:drawablePadding="100dp"
                    android:text="@string/camera"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineVertical_2"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_galery"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:drawableEnd="@drawable/ic_image"
                    android:drawablePadding="100dp"
                    android:text="@string/galery"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guidelineVertical_2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <!--       -->
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>